JG-2007-01-10-0: Enhancem.: Added test for utilbin spooledit.
                 Review:    RD

CR-2007-01-09-1: Enhancem.: o enhanced tight_integration test to test slave
                              task killed scenario on all cluster hosts

CR-2007-01-09-0: Bugfix:    o checktree/install_core_system/init_cluster.tcl:
                              added check for pwd problem with csh when links
                              are in the directory path
                            o fixed qconf test for host_aliased setup
                            o fixed host_aliases for host_aliased setup
                            o fixed scheduler/reconnect for host_aliased setup
                            o enhanded error output in job_start test
                            o fixed get_file_uid() and get_file_gid() hopefully
                              now work for all platforms (used by job_start test)
                            o new optional parameter for host_list_compare():
                                 resolve host lists before compare

RH-2007-01-09-0: Bugfix:    arco_build does not longer overwrite 
                            build_private.properties
                 Review:    JG

JG-2006-01-09-0: Bugfix:    Fixed problems with various ARCo tests.
                 Review:    RH

JG-2006-01-09-0: Bugfix:    o Fixed auto install test with bdb rpc spooling.
                            o Fixed scheduler/reconnect test with long 
                              hostnames.
                            o Fixed ARCo installation.

RD-2006-01-09-0: Enhancem:  added test for default requests
                 Review:    JG

CR-2006-01-08-1: Bugfix:    o fixed /checktree/system_tests/windows/sgepasswd:
                              test does not work for CSP systems, disabled it
                              for CSP systems and added some TODOs

CR-2006-01-08-0: Cleanup:   o improved drmaa test output
                            o added wait time (this might fix some 