@@ -103,6 +103,8 @@ proc drmaa_init_level {} {
 
 # -------- local test procedures -----------------------------------------------
 
+global drmaa_test_scenario_settings
+
 proc drmaa_setup {} {
    global drmaa_config
 
@@ -141,7 +143,7 @@ proc drmaa_cleanup  {} {
 proc drmaa_check {} {
    global ts_config CHECK_OUTPUT
    global CHECK_USER
-   global CHECK_ACT_LEVEL
+   global CHECK_ACT_LEVEL drmaa_test_scenario_settings check_description
 
    foreach host $ts_config(unique_arch_nodes) {
       set compile_arch_mt [resolve_build_arch_installed_libs $host]
@@ -149,6 +151,9 @@ proc drmaa_check {} {
       set binary_path "$ts_config(source_dir)/$compile_arch_mt"
       puts $CHECK_OUTPUT "host is $host has arch $compile_arch_mt mt bin path $binary_path"
       set level $CHECK_ACT_LEVEL
+
+      set drmaa_test_scenario_settings(level) $CHECK_ACT_LEVEL
+      set drmaa_test_scenario_settings(level_name) $check_description($level)
 
       if {$level <= 202} {
          drmaa_redirect_lib "0.95" $host
@@ -175,51 +180,76 @@ proc drmaa_check {} {
             drmaa_test_st_input_becomes_output $host $binary_path
 
             # -- tests without an argument
-            foreach st_test "ST_ERROR_CODES ST_MULT_INIT ST_MULT_EXIT \
-               ST_SUPPORTED_ATTR ST_SUPPORTED_VATTR ST_VERSION ST_DRM_SYSTEM \
-               ST_CONTACT ST_EMPTY_SESSION_WAIT \
-               ST_EMPTY_SESSION_SYNCHRONIZE_DISPOSE \
-               ST_EMPTY_SESSION_SYNCHRONIZE_NODISPOSE ST_DRMAA_IMPL \
-               ST_UNSUPPORTED_ATTR ST_UNSUPPORTED_VATTR" {
+            set test_scenario {}
+            lappend test_scenario "ST_ERROR_CODES"
+            lappend test_scenario "ST_MULT_INIT"
+            lappend test_scenario "ST_MULT_EXIT"
+            lappend test_scenario "ST_SUPPORTED_ATTR"
+            lappend test_scenario "ST_SUPPORTED_VATTR"
+            lappend test_scenario "ST_VERSION"
+            lappend test_scenario "ST_DRM_SYSTEM"
+            lappend test_scenario "ST_CONTACT"
+            lappend test_scenario "ST_EMPTY_SESSION_WAIT"
+            lappend test_scenario "ST_EMPTY_SESSION_SYNCHRONIZE_DISPOSE"
+            lappend test_scenario "ST_EMPTY_SESSION_SYNCHRONIZE_NODISPOSE"
+            lappend test_scenario "ST_DRMAA_IMPL"
+            lappend test_scenario "ST_UNSUPPORTED_ATTR"
+            lappend test_scenario "ST_UNSUPPORTED_VATTR"
+
+            foreach st_test $test_scenario {
                
                puts "starting single threaded test $st_test"
                drmaa_test $host $binary_path $st_test ""
             }
            
             # -- tests to ensure control operations on session without jobs result in DRMAA_ERRNO_SUCCESS 
-            foreach control_op "DRMAA_CONTROL_SUSPEND DRMAA_CONTROL_RESUME \
-                  DRMAA_CONTROL_HOLD DRMAA_CONTROL_RELEASE \
-                  DRMAA_CONTROL_TERMINATE" {
+            set test_scenario {}
+            lappend test_scenario "DRMAA_CONTROL_SUSPEND"
+            lappend test_scenario "DRMAA_CONTROL_RESUME"
+            lappend test_scenario "DRMAA_CONTROL_HOLD"
+            lappend test_scenario "DRMAA_CONTROL_RELEASE"
+            lappend test_scenario "DRMAA_CONTROL_TERMINATE"
+            foreach control_op $test_scenario {
                puts "starting single threaded test ST_EMPTY_SESSION_CONTROL $control_op"
                drmaa_test $host $binary_path ST_EMPTY_SESSION_CONTROL "$control_op"
             }
 
             # -- tests with a <sleeper_job> argument
-            foreach st_test "ST_SUBMIT_WAIT ST_BULK_SUBMIT_WAIT \
-                  ST_BULK_SINGLESUBMIT_WAIT_INDIVIDUAL \
-                  ST_SUBMITMIXTURE_SYNC_ALL_DISPOSE \
-                  ST_SUBMITMIXTURE_SYNC_ALL_NODISPOSE \
-                  ST_SUBMITMIXTURE_SYNC_ALLIDS_DISPOSE \
-                  ST_SUBMITMIXTURE_SYNC_ALLIDS_NODISPOSE \
-                  ST_SUBMIT_PAUSE_SUBMIT_SYNC ST_INPUT_FILE_FAILURE \
-                  ST_OUTPUT_FILE_FAILURE ST_ERROR_FILE_FAILURE \
-                  ST_SUBMIT_SUSPEND_RESUME_WAIT ST_SUBMIT_POLLING_WAIT_TIMEOUT \
-                  ST_SUBMIT_POLLING_WAIT_ZEROTIMEOUT \
-                  ST_SUBMIT_POLLING_SYNCHRONIZE_TIMEOUT \
-                  ST_SUBMIT_POLLING_SYNCHRONIZE_ZEROTIMEOUT \
-                  ST_BULK_SUBMIT_IN_HOLD_SESSION_RELEASE \
-                  ST_BULK_SUBMIT_IN_HOLD_SINGLE_RELEASE \
-                  ST_BULK_SUBMIT_IN_HOLD_SESSION_DELETE \
-                  ST_BULK_SUBMIT_IN_HOLD_SINGLE_DELETE \
-                  ST_SUBMIT_IN_HOLD_RELEASE ST_SUBMIT_IN_HOLD_DELETE \
-                  ST_SYNCHRONIZE_NONEXISTANT ST_RECOVERABLE_SESSION" {
+            set test_scenario {}
+            lappend test_scenario "ST_SUBMIT_WAIT"
+            lappend test_scenario "ST_BULK_SUBMIT_WAIT"
+            lappend test_scenario "ST_BULK_SINGLESUBMIT_WAIT_INDIVIDUAL"
+            lappend test_scenario "ST_SUBMITMIXTURE_SYNC_ALL_DISPOSE"
+            lappend test_scenario "ST_SUBMITMIXTURE_SYNC_ALL_NODISPOSE"
+            lappend test_scenario "ST_SUBMITMIXTURE_SYNC_ALLIDS_DISPOSE"
+            lappend test_scenario "ST_SUBMITMIXTURE_SYNC_ALLIDS_NODISPOSE"
+            lappend test_scenario "ST_SUBMIT_PAUSE_SUBMIT_SYNC"
+            lappend test_scenario "ST_INPUT_FILE_FAILURE"
+            lappend test_scenario "ST_OUTPUT_FILE_FAILURE"
+            lappend test_scenario "ST_ERROR_FILE_FAILURE"
+            lappend test_scenario "ST_SUBMIT_SUSPEND_RESUME_WAIT"
+            lappend test_scenario "ST_SUBMIT_POLLING_WAIT_TIMEOUT"
+            lappend test_scenario "ST_SUBMIT_POLLING_WAIT_ZEROTIMEOUT"
+            lappend test_scenario "ST_SUBMIT_POLLING_SYNCHRONIZE_TIMEOUT"
+            lappend test_scenario "ST_SUBMIT_POLLING_SYNCHRONIZE_ZEROTIMEOUT"
+            lappend test_scenario "ST_BULK_SUBMIT_IN_HOLD_SESSION_RELEASE"
+            lappend test_scenario "ST_BULK_SUBMIT_IN_HOLD_SINGLE_RELEASE"
+            lappend test_scenario "ST_BULK_SUBMIT_IN_HOLD_SESSION_DELETE"
+            lappend test_scenario "ST_BULK_SUBMIT_IN_HOLD_SINGLE_DELETE"
+            lappend test_scenario "ST_SUBMIT_IN_HOLD_RELEASE"
+            lappend test_scenario "ST_SUBMIT_IN_HOLD_DELETE"
+            lappend test_scenario "ST_SYNCHRONIZE_NONEXISTANT"
+            lappend test_scenario "ST_RECOVERABLE_SESSION"
+
+            foreach st_test $test_scenario {
                puts "starting single threaded test $st_test"
                drmaa_test $host $binary_path $st_test $ts_config(testsuite_root_dir)/scripts/suspendable_sleeper.sh
-               after 1000
             }
 
             # -- tests with a <sleeper_job> argument repeatedly 
-            foreach st_test "ST_SUBMIT_NO_RUN_WAIT" {
+            set test_scenario {}
+            lappend test_scenario "ST_SUBMIT_NO_RUN_WAIT"
+            foreach st_test $test_scenario {
                set n 100
                puts "starting single threaded test $st_test $n times each"
                for {set i 0} {$i < $n} {incr i} {
@@ -228,7 +258,10 @@ proc drmaa_check {} {
             }
 
             # -- tests with a <exit_arg_job> argument
-            foreach ste_test "ST_EXIT_STATUS ST_USAGE_CHECK" {
+            set test_scenario {}
+            lappend test_scenario "ST_EXIT_STATUS"
+            lappend test_scenario "ST_USAGE_CHECK"
+            foreach ste_test $test_scenario {
                puts "starting single threaded test $ste_test"
                drmaa_test $host $binary_path $ste_test $ts_config(testsuite_root_dir)/scripts/exit.sh
             }
@@ -246,14 +279,18 @@ proc drmaa_check {} {
          } 
          "201" { 
             # all MT tests need a sleeper job as argument
-            foreach mt_test "MT_SUBMIT_WAIT MT_EXIT_DURING_SUBMIT \
-                     MT_SUBMIT_MT_WAIT MT_EXIT_DURING_SUBMIT_OR_WAIT \
-                     MT_SUBMIT_BEFORE_INIT_WAIT" {
+            set test_scenario {}
+            lappend test_scenario "MT_SUBMIT_WAIT"
+            lappend test_scenario "MT_EXIT_DURING_SUBMIT"
+            lappend test_scenario "MT_SUBMIT_MT_WAIT"
+            lappend test_scenario "MT_EXIT_DURING_SUBMIT_OR_WAIT"
+            lappend test_scenario "MT_SUBMIT_BEFORE_INIT_WAIT"
+            foreach mt_test $test_scenario {
                puts "starting multi threaded test $mt_test"
                drmaa_test $host $binary_path $mt_test $ts_config(product_root)/examples/jobs/sleeper.sh
             }
-         } 
-         "202" { 
+         }
+         "202" {
             # shutdown qmaster
             shutdown_master_and_scheduler $ts_config(master_host) [get_qmaster_spool_dir] 
 
@@ -300,11 +337,29 @@ proc drmaa_check {} {
 #*******************************
 #
 proc drmaa_test { host binary_path test_name arguments {user ""} } {
-   global CHECK_OUTPUT CHECK_USER
+   global CHECK_OUTPUT CHECK_USER drmaa_test_scenario_settings
 
    if {$user == ""} { 
       set user $CHECK_USER
    }
+   set add_info "\n----------------------------------------------\n"
+   append add_info "dramaa scenario (testsuite run level): \"$drmaa_test_scenario_settings(level)\"\n"
+   append add_info "dramaa scenario description:           \"$drmaa_test_scenario_settings(level_name)\"\n"
+   append add_info "test_drmaa host: $host\n"
+   append add_info "test_drmaa user: $user\n"
+   append add_info "test_drmaa binary: $binary_path/test_drmaa\n"
+   append add_info "test_drmaa arguments: $test_name $arguments\n"
+
+   puts $CHECK_OUTPUT "first checking testsuite connection by starting remote command ..."
+   set output [start_remote_prog $host $user ls "-la"]
+   if { $output == "" } {
+      add_proc_error "drmaa_test" -1 "remote shell problems!"
+   }
+   if { $prg_exit_state != 0 } {
+      add_proc_error "drmaa_test" -1 "remote shell problems! (exit state not 0)"
+   }
+
+   puts $CHECK_OUTPUT "starting ..."
    puts $CHECK_OUTPUT "$binary_path/test_drmaa $test_name $arguments"
 
    set time_start [clock seconds]
@@ -319,10 +374,10 @@ proc drmaa_test { host binary_path test_name arguments {user ""} } {
       puts $CHECK_OUTPUT "test took $run_time seconds on host $host."
    }
    if { $run_time > 450 } {
-      add_proc_error drmaa_check -3 "test $test_name $arguments on host $host took more than 450 seconds! (testsuite timeout=550)"
+      add_proc_error drmaa_check -3 "test $test_name $arguments on host $host took more than 450 seconds! (testsuite timeout=550)\n$add_info"
    }
    if { $prg_exit_state != 0 } {
-      add_proc_error drmaa_check -1 "$binary_path/test_drmaa $test_name $arguments failed at host $host (runtime: $run_time)"
+      add_proc_error drmaa_check -1 "$binary_path/test_drmaa $test_name $arguments failed at host $host (runtime: $run_time)\n$add_info"
    }
 }
 
